--- a/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
@@ -24,8 +24,8 @@ function jsKalturaPlayerTest( videoId ){
 				}
 				if( $('#testLongCompanion').find('a').length && 
 					$('#testCompanion').find('a').length ){
-					equal( $('#testLongCompanion').find('a').attr('href'), "http://www.google.com", "testLongCompanion updated link" );
-					equal( $('#testCompanion').find('a').attr('href'), "http://www.google.com", "testCompanion updated link" );
+					equal( $('#testLongCompanion').find('a').attr('href'), "http://google.com", "testLongCompanion updated link" );
+					equal( $('#testCompanion').find('a').attr('href'), "http://google.com", "testCompanion updated link" );
 					start();
 					return ;
 				}
@@ -69,7 +69,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1312423631/wid/_243342/u
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&vast.plugin=true&vast.numPreroll=1&vast.prerollInterval=1&vast.prerollstartwith=1&vast.prerollUrl=http://ad.doubleclick.net/pfadx/AngelaSite;kw=html5linearnonlinear;sz=300x300;ord=5036130;dcmt=text/xml&vast.presequence=1&vast.timeout=4&vast.htmlCompanions=testCompanion:300:250;testLongCompanion:728:90;" />
+	<param name="flashVars" value="&vast.plugin=true&vast.numPreroll=1&vast.prerollInterval=1&vast.prerollstartwith=1&vast.prerollUrl=http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml&vast.presequence=1&vast.timeout=4&vast.htmlCompanions=testCompanion:300:250;testLongCompanion:728:90;" />
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1312423631/wid/_243342/uiconf_id/5349042/entry_id/0_swup5zao" />
 </object>
 <!-- 
