adds support for EmbedPlayer.ReplaceSources and json flashvars
-- flashvars are now encoded as JSON to support structure variable
passing
-- adds test file for replace sources validates source updates.

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -18,6 +18,9 @@ function jsKalturaPlayerTest( videoId ){
 			test("AutoPlay flashvar passing", function(){
 				ok( kdp.evaluate('{configProxy.flashvars.autoPlay}') , 'AutoPlay flashvar set');
 			});
+			test( "Aribrary flashvar string passing", function(){
+				equal( kdp.evaluate('{configProxy.flashvars.fooBar}'), 'cats', "Passed foobar property" );
+			})
 		}
 		
 		kalturaQunitWaitForPlayer( function(){
