--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -20,6 +20,7 @@ function jsKalturaPlayerTest( videoId ){
 
 	asyncTest("Iframe layout elements", function(){
 		kalturaQunitWaitForPlayer(function(){
+			alert("kalturaQunitWaitForPlayer");
 			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
 			ok( $iframe.find('.play-btn').length, ".play-btn found" );
 			start();
