make MwEmbedSupport part of the full script request
-- avoids one extra round trip.

--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -37,9 +37,7 @@ function jsKalturaPlayerTest( videoId ){
 <script>
 	function jsCallbackReady( videoId ){
 		var kdp = $('#' + videoId)[0]
-		if( console && console.log ){
-			console.log( 'jsCallbackReady: ' + videoId );
-		}
+		kWidget.log( 'jsCallbackReady: ' + videoId );
 	}
 </script>
 
