--- a/modules/KalturaSupport/tests/EmptyPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/EmptyPlayer.qunit.html
@@ -10,8 +10,6 @@ function jsKalturaPlayerTest( videoId ){
 	// Name this module
 	module( "Empty Player" );
 
-	kdp.addJsListener( 'kdpEmpty', 'kdpEmptyFunction' );
-	
 	var $iframe = $('#' + videoId + '_ifp').contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
 	
@@ -19,18 +17,18 @@ function jsKalturaPlayerTest( videoId ){
 		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
 		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
 	});
-	// listen for the empty kdp event: 
 	
+	// listen for the empty kdp event:
 	asyncTest("Empty KDP", function(){
-		window.kdpEmptyFunction = function(){
+		window.runEmptyEventTest = function(){
 			ok( true, 'Empty event fired' );
-			ok( typeof kdp.sendNotification != 'undefined', "Player Api present" ); 
+			ok( typeof kdp.sendNotification != 'undefined', "Player Api present" );
 			start();
 			// Add a listner for entry ready: 
 			kdp.addJsListener( 'entryReady', 'kdpEntryReady' );
 			// Change player entry: 
-			kdp.sendNotification( "changeMedia", { 'entryId' : '0_uka1msg4' } ); 
-		};
+			kdp.sendNotification( "changeMedia", { 'entryId' : '0_uka1msg4' } );
+		}
 	});
 	asyncTest("Change entry called on empty player", function(){
 		window.kdpEntryReady = function(){
@@ -40,6 +38,14 @@ function jsKalturaPlayerTest( videoId ){
 			start();
 		}
 	})
+	window.kdpEmptyFunction = function(){
+		// add a time out for the async test init:
+		setTimeout(function(){
+			window.runEmptyEventTest();
+		},100);
+	};
+	// add empty player listener:
+	kdp.addJsListener( 'kdpEmpty', 'kdpEmptyFunction' );
 }
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
