updated Omniture plugin with latest plugin conventions
-- sets the plugin name as a variable to allow siteCatalist override.

--- a/modules/SiteCatalyst15/tests/SiteCatalyst15.qunit.html
+++ b/modules/SiteCatalyst15/tests/SiteCatalyst15.qunit.html
@@ -45,7 +45,7 @@ function jsKalturaPlayerTest( videoId ){
 		'flashvars': {
 			'siteCatalyst15.plugin' : true,
 			'siteCatalyst15.path' : '/content/uiconf/americanfamily/kdp3/v3.5.50/plugins/',
-			'siteCatalyst15.relativeTo' : 'video'
+			'siteCatalyst15.relativeTo' : 'video',
 			'siteCatalyst15.position' : 'before',
 			'siteCatalyst15.trackingServer' : 'corp1.d1.sc.omtrdc.net',
 			'siteCatalyst15.visitorNamespace' : 'corp1',
