basic playlist rendering support for RL 1.7
-- switched over to mw.Uri instead of mw.parseUri
-- removed some mediaWiki refs ( should be in respective module ) 
-- some comments clean up

--- a/modules/EmbedPlayer/tests/Player_ServerSeek.html
+++ b/modules/EmbedPlayer/tests/Player_ServerSeek.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
     	mw.ready( function(){
         	// check for hash:
-        	var urlParts = mw.parseUri( document.URL);
+        	var urlParts = new mw.Uri( document.URL);
         	if( urlParts.anchor ){
 				// run the start offset:
 				var startTime = urlParts.anchor.split('=')[1];
