--- a/modules/KalturaSupport/tests/kdpApiPlayFromTo.html
+++ b/modules/KalturaSupport/tests/kdpApiPlayFromTo.html
@@ -7,6 +7,9 @@
 		<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 		<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 		<script type="text/javascript">
+		// disable adaptive:
+		mw.setConfig('Kaltura.UseAppleAdaptive', false );
+		
 		var kdp;
 		function jsCallbackReady( playerId ) {
 			console.log('jsCallback Ready', playerId );
