--- a/modules/KalturaSupport/tests/ResizablePlayer.html
+++ b/modules/KalturaSupport/tests/ResizablePlayer.html
@@ -18,14 +18,14 @@
 <br />
 		
 	<div id="resizable" class="ui-widget-content">
-		<object id="kaltura_player_1336391515" name="kaltura_player_1336391515" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="100%" width="100%" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1336391515/wid/_423851/uiconf_id/7752622">
+		<object id="kaltura_player_1340268878" name="kaltura_player_1340268878" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="100%" width="100%" bgcolor="#000000" data="http://www.kaltura.com/index.php/kwidget/cache_st/1340268878/wid/_423851/uiconf_id/8145912">
 			<param name="allowFullScreen" value="true" />
 			<param name="allowNetworking" value="all" />
 			<param name="allowScriptAccess" value="always" />
 			<param name="bgcolor" value="#000000" />
-			<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=Music Playlist&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D423851%26subp_id%3D42385100%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D1_ca8ueg14&" />
-			<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1336391515/wid/_423851/uiconf_id/7752622" />
-		</object>		
+			<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=My ″Awesome″ playlist&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D423851%26subp_id%3D42385100%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D1_um9qhytc&" />
+			<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1340268878/wid/_423851/uiconf_id/8145912" />
+		</object>
 	</div>
 	
 	<script>
